--- a/no6.html
+++ b/no6.html
@@ -10,11 +10,35 @@
     <!-- allStyles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="css/styles_no6.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-
 </head>
 <body class="no6">
- <div class="wrapper-no6">
+ <div class="wrapper-no6 v1">
+    <div class="nav">
+        <ul class="nav__el">
+            <li class="nav__item active">button one</li>
+            <li class="nav__item">button two</li>
+        </ul>
+    </div>
+ 	<div class="button">
+ 		<div class="on-wrapper active first">
+ 			<div data-on="ON" class="on-before"><p>ON</p></div>
+ 			<div data-on="ON" class="on"><p>ON</p></div>
+ 		</div>
+ 		<div class="off-wrapper">
+ 			<div data-off="OFF" class="off-before"><p>OFF</p></div>
+ 			<div data-off="OFF" class="off"><p>OFF</p></div>
+ 		</div>
+ 	</div>
+    <div class="button2">
+        <div class="on-wrapper on-wrapper2 active">
+            <div data-on="ON" class="on"><p>ON</p></div>
+        </div>
+        <div class="off-wrapper off-wrapper2">
+            <div data-off="OFF" class="off"><p>OFF</p></div>
+        </div>
+    </div>
  </div>
  <script type="text/javascript" src="js/js06.js"></script>
 
