updated animation no 7

--- a/no7.html
+++ b/no7.html
@@ -47,9 +47,42 @@
         </div>
         <div class="logoani">LOGO</div>
     </div>
-    <div class="loading-bar">
-        <div class="loader"></div>
+    <div class="layout">
+        <div class="layout__nav">
+            <ul class="layout__nav-left">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <ul class="layout__nav-right">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="layout__title"></div>
+            <div class="layout__content">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
     </div>
+    <button class="restart">restart animation</button>
  </div>
  <script type="text/javascript" src="node_modules/gsap/src/minified/TweenMax.min.js"></script>
  <script type="text/javascript" src="js/js07.js"></script>
