--- a/no7.html
+++ b/no7.html
@@ -47,7 +47,7 @@
         </div>
         <div class="logoani">LOGO</div>
     </div>
-    <div class="layout">
+    <div class="layout notvisible">
         <div class="layout__nav">
             <ul class="layout__nav-left">
                 <li></li>
