--- a/no10.html
+++ b/no10.html
@@ -15,6 +15,17 @@
 </head>
 <body class="no10">
  <div class="wrapper-no10">
+     <div class="sidebar"> 
+         <div class="sidebar__inner">
+
+         </div>
+         <button class="btn-burger">
+            <span class="btn-burger__line line1"></span>
+            <span class="btn-burger__line line2"></span>
+            <span class="btn-burger__line line3"></span>
+            <span class="btn-burger__txt"></span>
+        </button>
+     </div>
  </div>
  <script type="text/javascript" src="js/js10.js"></script>
 </body>
