added personal website

--- a/no13-personal-website.html
+++ b/no13-personal-website.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,69 +11,72 @@
     <!-- allStyles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="css/styles_no13.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 </head>
+
 <body class="no13">
- <div class="wrapper-no13">
-     <div class="initials">CF</div>
-     <div class="text text--left">
-         <p class="text__text">
-            Hi - I‘m Claudia. 
-            I‘m building things 
-            for the Internet.  
-            I worked as media 
-            publisher/
-            digital producer, 
-            project manager 
-            and now as 
-            Frontend Developer.
-            Do you wanna know more about my 
-            knowledge? 
-            <button class="anchor anchor--inline anchor--left">See it here</button> 
-         </p>
-         <p class="text__text text__text--hidden">
-            The color changes 
-            depending on the 
-            weather in Zurich. 
-            For this I used the IPA of open weather map. The more rainy it is, the more green? It becomes. Blue? means  it‘s sunny - and maybe flyable :). 
-            Curious? Whatch the 
-            sourcecode on 
-            codepen or GitHub. 
-        </p>
-     </div>
-     <div class="text text--right">
-        <p class="text__text">
-            When I‘m not in 
-            front of a computer, 
-            I love to  paraglide.  
-            <button class="anchor anchor--inline anchor--right">See here</button> what‘s 
-            this website has to do with Paragliding. 
-            You can get in touch  with me via <a href="mailto: claudae_f@hotmail.com" class="anchor">e-mail</a>.
-            I also have an 
-            account on <a href="https://github.com/eyesight" class="anchor" target="_blank" >github</a>, 
-            <a href="https://codepen.io/eyesight" class="anchor" target="_blank" >codepen</a>, 
-            <a href="https://ch.linkedin.com/in/claudia-friedrich-90348884/" class="anchor" target="_blank" >linkedin</a>, 
-            <a href="https://www.xing.com/profile/Claudia_Friedrich27" class="anchor" target="_blank" >xing</a> and, 
-            <a href="https://www.instagram.com/eyesight84/" class="anchor" target="_blank" >Instagram</a>.
-        </p>
-        <p class="text__text text__text--hidden">
-            Things I use or used and still know well:
-            HTML, CSS (SASS), 
-            JavaScript (es6), 
-            React, WordPress. 
-            Adobe InDesign, 
-            Photoshop and 
-            Illustrator, 
-            a little After Effects
-            And: I love to 
-            animate stuff 
-            with different tools. And typografie. 
-       </p>
+    <div class="wrapper-no13">
+        <div class="initials">CF</div>
+        <div class="text text--left">
+            <p class="text__text">
+                Hi - I‘m Claudia.
+                I‘m building things
+                for the Internet.
+                I worked as media
+                publisher/
+                digital producer,
+                project manager
+                and now as
+                Frontend Developer.
+                Do you wanna know more about my
+                knowledge?
+                <button class="anchor anchor--inline anchor--left">See it here</button>
+            </p>
+            <p class="text__text text__text--hidden">
+                The color changes
+                depending on the
+                weather in Zurich.
+                I used the IPA of open weather map. The color is a mixture of winddirection, temperature and the
+                <a href="https://openweathermap.org/weather-conditions" target="_blank" class="anchor">weather-ID of the weather-conditions</a>. Now we have this background-color: <span class="color">rgb(0,0,0)</span>
+            </p>
+        </div>
+        <div class="text text--right">
+            <p class="text__text">
+                When I‘m not in
+                front of a computer,
+                I love to paraglide.
+                <button class="anchor anchor--inline anchor--right">See here</button> what‘s
+                this website has to do with Paragliding.
+                You can get in touch with me via <a href="mailto: claudae_f@hotmail.com" class="anchor">e-mail</a>.
+                I also have an
+                account on <a href="https://github.com/eyesight" class="anchor" target="_blank">github</a>,
+                <a href="https://codepen.io/eyesight" class="anchor" target="_blank">codepen</a>,
+                <a href="https://ch.linkedin.com/in/claudia-friedrich-90348884/" class="anchor"
+                    target="_blank">linkedin</a>,
+                <a href="https://www.xing.com/profile/Claudia_Friedrich27" class="anchor" target="_blank">xing</a> and,
+                <a href="https://www.instagram.com/eyesight84/" class="anchor" target="_blank">Instagram</a>.
+            </p>
+            <p class="text__text text__text--hidden">
+                Things I use or used and still know well:
+                HTML, CSS (SASS),
+                JavaScript (es6),
+                React, WordPress.
+                Adobe InDesign,
+                Photoshop and
+                Illustrator,
+                a little After Effects
+                And: I love to
+                animate stuff
+                with different tools. And typografie.
+            </p>
+        </div>
+
+        <!--     <canvas id="canvas"></canvas>-->
     </div>
-<!--     <canvas id="canvas"></canvas>--> 
-</div>
-<div class="info"></div>
- <script type="text/javascript" src="js/js13.js"></script>
+    <div class="cursor"></div>
+    <div class="info"></div>
+    <script type="text/javascript" src="js/js13.js"></script>
 </body>
+
 </html>
